# ccstring

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  portfile.cmake  usage  vcpkg.json
cmake/: ccstringConfig.cmake.in
examples/: CMakeLists.txt  examples.c
include/: CMakeLists.txt  ccstring.h
src/: CMakeLists.txt  ccstring.c
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.c
tests/: tests.c
